tests/neg-custom-args/captures/i24309-region-orig.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/i24309-region-orig.scala:20:6 --------------------------
20 |      a                     // error, limitation
   |      ^
   | Reference `r1.R` is not included in the allowed capture set {any}
   | of an enclosing function literal with expected type Region{type R^}^ => Ref^{r1.R}.
   |
   | where:    any is a root capability created in value x when checking argument to parameter f of method subregion
